New Branch Have Been Created.

--- a/product-webapp/webapp/src/app/Components/product-detailed/product-detailed.component.html
+++ b/product-webapp/webapp/src/app/Components/product-detailed/product-detailed.component.html
@@ -191,7 +191,7 @@
               </button> -->
 
 
-              <div class="add-review-form mt-4">
+              <!-- <div class="add-review-form mt-4">
           <h3 class="mb-3">Add Your Review</h3>
           <form #addReviews="ngForm" >
             <div>
@@ -233,7 +233,7 @@
 
             </div>
           </form>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
