--- a/product-webapp/webapp/src/app/Components/home/home.component.css
+++ b/product-webapp/webapp/src/app/Components/home/home.component.css
@@ -1,12 +1,13 @@
- /* home.component.css */
- .home-container {
+/* home.component.css */
+
+.home-container {
   padding: 2rem;
   background-color: #F6F4EB;
 }
 
 .top-carousel {
-  background-color: #4682A9; 
-  color: #fff; 
+  background-color: #4682A9;
+  color: #fff;
   border: 2px solid black;
   padding: 3% 0;
 }
@@ -26,8 +27,8 @@
 }
 
 .product-card-container {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   gap: 20px;
   justify-content: center;
 }
@@ -40,7 +41,7 @@
   text-align: center;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s, box-shadow 0.3s;
-  width: 280px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -56,13 +57,16 @@
   height: auto;
   display: block;
   margin: 0 auto 15px;
+  /* Set a fixed height to maintain consistency */
+  height: 200px;
+  object-fit: cover;
 }
 
 .product-details {
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: space-between; /* Adjusted to space-between */
 }
 
 .product-name {
@@ -75,30 +79,33 @@
   font-size: 1.2em;
   font-weight: bold;
   color: #007BFF;
+  /* Position price at the bottom */
+  align-self: flex-end;
 }
-
 
 .btn-container {
   display: flex;
+  justify-content: center;
 }
 
-.buy-now-btn, .add-to-card {
+.buy-now-btn,
+.add-to-card {
   width: 50%;
   display: inline-block;
 }
 
-.carousel{
+.carousel {
   width: 100%;
-  height: 50%;
+  height: auto;
   text-align: center;
 }
 
-.mat-mdc-form-field-flex{
-border-radius: 30%;
+.mat-mdc-form-field-flex {
+  border-radius: 30%;
 }
 
 .brand-container {
-padding: 2rem;
+  padding: 2rem;
 }
 
 /* app.component.css */
@@ -108,15 +115,11 @@ padding: 2rem;
 
 .logo-row {
   display: flex;
-  /* padding-right: 2%; */
   gap: 20px;
   justify-content: center;
   align-items: center;
 }
 
-
-
 .main-content {
-  flex: 1; 
+  flex: 1;
 }
-
