--- a/product-webapp/webapp/src/app/Components/product-detailed/product-detailed.component.html
+++ b/product-webapp/webapp/src/app/Components/product-detailed/product-detailed.component.html
@@ -42,7 +42,7 @@
           </p>
           <hr />
           <div class="d-grid gap-2">
-            <button class="btn btn-primary" (click)="addToCart()" type="button">Add to cart</button>
+            <button class="btn btn-primary" style="background-color: #4682A9;" (click)="addToCart()" type="button">Add to cart</button>
           </div>
         </div>
       </main>
