--- a/product-webapp/webapp/src/app/Components/login/login.component.css
+++ b/product-webapp/webapp/src/app/Components/login/login.component.css
@@ -1,74 +1,44 @@
-/* Center the login form */
-.login-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
 
-/* Add some padding and adjust card size */
-mat-card {
-  width: 300px;
-  padding: 20px;
-}
+/*
+  ..................... */
 
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-}
-
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  transition: 0.4s;
-  border-radius: 34px;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  transition: 0.4s;
-  border-radius: 50%;
-}
-
-input:checked + .slider {
-  background-color: #2196F3;
-}
-
-input:checked + .slider:before {
-  transform: translateX(26px);
-}
-
-
-/* Position the dropdown */
-.dropdown-container {
-  /* position: absolute;
-  top: 20px;
-  right: 20px;
+  :host {
     display: flex;
-    justify-content: flex-end; */
-  margin-top: auto;
-  margin-bottom: auto;
-  margin-left: auto;
-  margin-right: auto;
-
+    justify-content: center;
+    margin: 100px 0px;
   }
 
+  .mat-form-field {
+    width: 100%;
+    min-width: 300px;
+  }
+
+  mat-card-title,
+  mat-card-content {
+    display: flex;
+    justify-content: center;
+  }
+
+  .error {
+    padding: 16px;
+    width: 300px;
+    color: white;
+    background-color: red;
+  }
+
+  .button {
+    display: flex;
+    justify-content: center;
+
+  }
+.btn1{
+  padding-left: 6%;
+  border-radius: 999px;
+  padding-right: 6%;
+  padding-top: 2%;
+  padding-bottom: 2%; background-color: white;border-color: #4cc8ff;
+}
+.btn1:hover{
+  background-color: whitesmoke;
+  box-shadow: 5px 5px 5px #ccc;
+}
