--- a/product-webapp/webapp/src/app/Components/sign-up-seller/sign-up-seller.component.html
+++ b/product-webapp/webapp/src/app/Components/sign-up-seller/sign-up-seller.component.html
@@ -1,4 +1,4 @@
-<div style="display: flex;">
+<!-- <div style="display: flex;">
 
 
 
@@ -56,4 +56,109 @@
   </div>
   <img src="../../../assets/Shop_Smartly_Logo_Symbol_2400x1800-removebg-preview.png"
     style="width: 20%; height: 20%;margin-top: auto;">
-</div>
+</div> -->
+
+
+
+
+<!-- <div style="display: flex;padding-top: 3%;"> -->
+<!--  -->
+
+<mat-card style="display: flex; flex-direction: row; width: 70%;  box-shadow: 5px 5px 5px #ccc;margin-bottom: 3rem;">
+
+  <mat-card-content>
+    <img src="../../../assets/6310507.jpg" style="width: 100%;padding: 0;">
+  </mat-card-content>
+  <div style="width: 100%; padding: 2rem;">
+    <mat-card-title>
+      <h1>Create new Seller</h1>
+    </mat-card-title>
+    <mat-card-content>
+      <form [formGroup]="singInForm" (ngSubmit)="onSubmit()">
+        <p>
+          <mat-form-field>
+            <input id="userName" type="text" style="width: 100%;padding-top: 0.3rem;padding-bottom: 0.3rem;"
+              formControlName="sellerName" placeholder="Seller Name" matInput>
+            <span class="text-danger"
+              *ngIf="registerFormControl.sellerName.touched && registerFormControl.sellerName.errors?.['required']">
+              Seller Name is required
+            </span>
+          </mat-form-field>
+        </p>
+        <p>
+          <mat-form-field>
+            <input id="email" type="email" style="width: 100%;padding-top: 0.3rem;padding-bottom: 0.3rem;"
+              formControlName="sellerEmail" placeholder="Email" matInput>
+            <span class="text-danger"
+              *ngIf="registerFormControl.sellerEmail.touched && registerFormControl.sellerEmail.errors?.['required']">
+              Email is required
+            </span>
+          </mat-form-field>
+        </p>
+        <p>
+          <mat-form-field>
+            <input id="password" type="password" style="width: 100%;padding-top: 0.3rem;padding-bottom: 0.3rem;"
+              formControlName="sellerPassword" placeholder="Password" matInput>
+            <span class="text-danger"
+              *ngIf="registerFormControl.sellerPassword.touched && registerFormControl.sellerPassword.errors?.['required']">
+              Password is required
+            </span>
+          </mat-form-field>
+        </p>
+        <p>
+          <mat-form-field>
+            <input id="phoneNo" type="text" style="width: 100%;padding-top: 0.3rem;padding-bottom: 0.3rem;"
+              formControlName="sellerPhoneNo" placeholder="Phone No" matInput>
+            <span class="text-danger"
+              *ngIf="registerFormControl.sellerPhoneNo.touched && registerFormControl.sellerPhoneNo.errors?.['required']">
+              Phone no is required
+            </span>
+          </mat-form-field>
+        </p>
+        <p>
+          <mat-form-field>
+            <input id="age" type="text" style="width: 100%;padding-top: 0.3rem;padding-bottom: 0.3rem;"
+              formControlName="sellerAge" placeholder="Age" matInput>
+            <span class="text-danger"
+              *ngIf="registerFormControl.sellerAge.touched && registerFormControl.sellerAge.errors?.['required']">
+              Age is required
+            </span>
+          </mat-form-field>
+        </p>
+
+
+        <div
+          style="display: flex;width: 70%;justify-content: space-between;padding-top: 0.3rem;padding-bottom: 0.3rem;">
+          Gender:
+          <div style="display: flex;  align-items: baseline;">
+            <input type="radio" id="male" name="sellerGender" value="male" formControlName="sellerGender">
+            <label for="">Male</label><br>
+          </div>
+          <div style="display: flex;  align-items: baseline;">
+            <input type="radio" id="female" name="sellerGender" value="female" formControlName="sellerGender">
+            <label for="female">Female</label><br>
+          </div>
+
+        </div>
+
+
+        <div class="button">
+          <button type="submit" class="btn1">SignUp</button>
+        </div>
+        <!--
+              <p *ngIf="error" class="error">
+                {{ error }}
+              </p> -->
+        <!-- <div style="    display: flex;
+        justify-content: space-between;
+        align-items: center;"> -->
+
+      </form>
+
+    </mat-card-content>
+
+  </div>
+
+
+
+</mat-card>
