--- a/product-webapp/webapp/src/app/Components/order-history/order-history.component.html
+++ b/product-webapp/webapp/src/app/Components/order-history/order-history.component.html
@@ -3,28 +3,56 @@
     <h1>Order History</h1>
   </header>
   <!-- ... rest of the code ... -->
-<div *ngFor="let order of orders" class="order-card">
-<div class="order-summary" (click)="order.expanded = !order.expanded">
-  <div class="order-product">{{ order.product }}</div>
-  <div class="order-price">{{ order.price | currency:'USD' }}</div>
-  <div class="order-expand-icon">{{ order.expanded ? '-' : '+' }}</div>
-</div>
-<div class="order-details" *ngIf="order.expanded">
-  <img [src]="order.image" alt="{{ order.product }} Image" class="product-image">
-  <div class="order-quantity">{{ order.quantity }} x</div>
-  <div class="order-review">
-    <h3>Write a Review</h3>
-    <div class="star-rating">
-      <span *ngFor="let star of [1, 2, 3, 4, 5]" class="star">&#9733;</span>
+  <div *ngFor="let order of orders" class="order-card">
+    <div class="order-summary" (click)="order.expanded = !order.expanded" >
+      <div class="order-product">{{ order.product }}</div>
+      <div class="order-price">{{ order.price | currency : "USD" }}</div>
+      <div
+        class="order-expand-icon"
+        *ngIf = "order.expanded ? reviewYourOrder(order) : null"
+      >
+        {{ order.expanded ? "-" : "+" }}
+      </div>
     </div>
-    <textarea rows="4" placeholder="Write your review"></textarea>
-     <div>
-                  <input accept="image/jpeg, image/png" #fileInput hidden type="file" value="this.fileName"/>
-                  <button type = "select" >Upload Image</button>
-                  <img height="150px" #previewImage  />
-                </div>
-    <button>Submit Review</button>
+    <div class="order-details" *ngIf="order.expanded">
+      <img
+        [src]="order.image"
+        alt="{{ order.product }} Image"
+        class="product-image"
+      />
+      <div class="order-quantity">{{ order.quantity }} x</div>
+      <div class="order-review">
+        <h3>Write a Review</h3>
+        <div class="star-rating">
+          <!-- <span *ngFor="let star of [1, 2, 3, 4, 5]" class="star">&#9733;</span> -->
+          <i
+            *ngFor="let _ of [1, 2, 3, 4, 5]; let i = index"
+            (click)="selectRating(i)"
+            [class]="i + 1 <= this.rating ? 'fa fa-star' : 'fa fa-star-o'"
+          ></i>
+        </div>
+
+        <textarea
+          rows="4"
+          placeholder="Write your review"
+          [(ngModel)]="writeReview"
+        ></textarea>
+        <div>
+          <div>
+            <input
+              (change)="onFileSelected($event)"
+              accept="image/jpeg, image/png"
+              #fileInput
+              hidden
+              type="file"
+              value="this.fileName"
+            />
+            <button (click)="onfileChange()" type="select">Upload Image</button>
+            <img height="150px" #previewImage />
+          </div>
+        </div>
+        <button (click)="saveYourReview()">Submit Review</button>
+      </div>
+    </div>
   </div>
-</div>
-</div>
 </div>
