Now Delete Function working as expected , and new wishlist button have been added and needs some style and functionality.

--- a/product-webapp/webapp/src/app/Components/viewbycategory/viewbycategory.component.css
+++ b/product-webapp/webapp/src/app/Components/viewbycategory/viewbycategory.component.css
@@ -144,10 +144,11 @@ h2::after {
 	cursor: pointer;
 	font-size: 16px;
 	color: #abb0b8;
-}
-.carousel .wish-icon .fa-heart {
+  }
+  
+  .carousel .wish-icon i.active {
 	color: #ff6161;
-}
+  }
 .star-rating li {
 	padding: 0;
 }
