--- a/product-webapp/webapp/src/app/Components/viewbycategory/viewbycategory.component.html
+++ b/product-webapp/webapp/src/app/Components/viewbycategory/viewbycategory.component.html
@@ -9,9 +9,11 @@
                             <div class="row">
                                 <div class="col-sm-3" *ngFor="let item of similarProducts">
                                     <div class="thumb-wrapper">
-                                        <button class="wish-icon" (click)="addItemToWishList(item)">
-                                            <i class="fa fa-heart-o" [ngClass]="{'active': isItemInWishList(item)}"></i>
-                                          </button>
+                                        <span class="wish-icon" *ngIf="!isInWishList(item)" (click)="addToWishlist(item)">
+                                            <i class="fa fa-heart-o"></i>
+                                        </span>
+                                          <span *ngIf="isInWishList(item)">Added in Wishlist</span>
+                                          
                                         <div class="img-box">
                                             <img [src]="'data:image/jpeg;base64,' + item.product_image" class="img-fluid" alt="">
                                         </div>
