--- a/product-webapp/webapp/src/styles.css
+++ b/product-webapp/webapp/src/styles.css
@@ -3,6 +3,5 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;background-color: #F6F4EB ; }
 
+@import '~sweetalert2/dist/sweetalert2.min.css';
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
