--- a/product-webapp/webapp/src/app/Components/home/home.component.html
+++ b/product-webapp/webapp/src/app/Components/home/home.component.html
@@ -49,7 +49,7 @@
   </div>
 
   <div style="text-align: center; padding-top: 3%; padding-bottom: 2%;">
-    <p style="font-size: xx-large;">Our Top Rated Products</p>
+    <p style="font-size: xx-large;">Shop From Our Top Rated Products</p>
     <button routerLink="/view_products" mat-raised-button style="float: right; background-color:#4682A9; color:aliceblue">See More</button>
   </div>
   <div class="carousel">
@@ -92,7 +92,7 @@
     </ngb-carousel>
   </div>
   <div style="text-align: center; padding-top: 2%; padding-bottom: 2%;">
-    <p style="font-size: xx-large;">From Your Order History</p>
+    <p style="font-size: xx-large;">Shop From Our New Arrivals</p>
   </div>
   <div class="carousel">
     <ngb-carousel [showNavigationArrows]="false">
